gl33-master/src/test/deca/context/valid/others/extends.deca
class Hello {

    int a = 2;
    protected boolean b;

    void bonjour(boolean a) {
        println("hello");
    }
}

class World extends Hello {

    void bonjour(boolean a) {
        println("hello world");
    }
}

{
    println("ok");
}