gl33-master/src/test/deca/context/invalid/other/redefMethodAsField.deca
class Hello {

    int a = 2;
    protected boolean b;

    int bonjour(boolean a) {
        println("hello");
        return 3;
    }
}

class World extends Hello {

    int bonjour;
}

{
    println("ok");
}